fixed the number of rows, added class and css to align calendars

--- a/src/index.css
+++ b/src/index.css
@@ -37,11 +37,16 @@ html {
 }
 .calendar {
   display: inline-block;
+  padding: 2rem;
 }
 
 .calendar__month {
   text-align: center;
   caption-side: top;
+}
+
+.calendar__day--empty {
+  color: white;
 }
 
 .highlighted {
